SNOW-937199 Build on Java 11 and 17 on Github actions